# eclipse-yocto

./: .gitignore  .project  .travis.yml  README.dev  README.maven  README.txt  appveyor.yml  build.sh  pom.xml
features/org.yocto.bc/: .project  feature.properties  feature.xml
features/org.yocto.bc.headless.build/: .project  build.properties  customTargets.xml
features/org.yocto.doc/: .project  feature.properties  feature.xml  pom.xml
features/org.yocto.doc.headless.build/: .project  build.properties  customTargets.xml
features/org.yocto.sdk/: .project  build.properties  feature.properties  feature.xml  pom.xml
features/org.yocto.sdk.feature/: .project  build.properties  feature.xml
features/org.yocto.sdk.headless.build/: .project  build.properties  customTargets.xml
features/org.yocto.sdk.site/: .project  category.xml  index.html  site.xml
features/org.yocto.utils/: .project  feature.properties  feature.xml  pom.xml
features/org.yocto.utils.headless.build/: build.properties  customTargets.xml
org.Yocto.sdk.ide/: .project  plugin.xml  readme
plugins/org.Yocto.sdk.ide/: build.properties  readme
plugins/org.yocto.bc.ui/: .project  local.conf  plugin.xml
plugins/org.yocto.cmake.managedbuilder/: .project  (+3 more)
plugins/org.yocto.cmake.managedbuilder/templates/projecttemplates/HelloWorldCCMakeProject/src/: CMakeLists.txt  main.c
scripts/: build.sh  change-java-version.sh  find-version  generate-doc.sh  readme.txt  setup.sh
tcf/: lke_rse_tcf.patch  r979_agent_lianhao.patch  r979_terminal.patch  readme  terminals_agent.patch  terminals_plugin.patch
(+401 files in other folders)
